Protect api endpoints and allow sandbox delete
